@@ -984,6 +984,9 @@
 
       \item \code{aperm(matrix(1:6, 2, dimnames=list(A={}, B={})), "A")}
       no longer segfaults.
+      
+      \item Expressions involving user defined operators were not 
+      always deparsed faithfully. (\PR{15179})
     }
 
   }
